Pesan maaf saat peladen luring

--- a/kasmaji2018/pengimpor-kontak.html
+++ b/kasmaji2018/pengimpor-kontak.html
@@ -4,22 +4,14 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="robots" content="noindex,nofollow,noarchive,nocache">
-		<title>Pengimpor Kontak</title>
-		<style>
-html, body {
-	overflow: hidden;
-}
-
-html, body, iframe {
-	margin: 0;
-	border: 0;
-	padding: 0;
-	width: 100%;
-	height: 100%;
-}
-		</style>
+		<!-- <meta http-equiv="refresh" content="0; url=https://toolkitsmansa.github.io"> -->
+		<title>Pengimpor Kontak - Peladen Luring</title>
 	</head>
 	<body>
-		<iframe src="https://toolkitsmansa.github.io"></iframe>
+		<p>Peladen sedang luring. Silakan hubungi narahubung untuk meminta bantuan.</p>
+		<!--
+		<p>Mengarahkan Anda ke peladen aktif...</p>
+		<p>Anda tidak kunjung diarahkan? Klik <a href="https://toolkitsmansa.github.io">di sini</a>.
+		-->
 	</body>
 </html>
